<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SocialBank</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Identificarse</string>
    <string name="forgot">¿Olvidaste tu contraseña?</string>
    <string name="account">"¿Necesitas una cuenta?"</string>
    <string name="textForgot">"¿Has olvidado tu contraseña?\n ¡Introduce tu correo y te enviaremos una nueva!"</string>
    <string name="google_sign_up">Registrarse con Google</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="last_name">Apellido</string>
    <string name="first_name">Nombre</string>
    <string name="register">REGISTRARSE</string>
    <string name="submit">Enviar</string>
    <string name="repeat_password">Confirmar la contraseña</string>
    <string name="change_password">CAMBIAR CONTRASEÑA</string>
    <string name="token">Token</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="loading">Cargando</string>
    <string name="update_password">Actualiza tu contraseña\n Introduce el token y la nueva contraseña</string>
    <string name="i_have_token">Tengo un token</string>
    <string name="welcome">Bienvenido</string>
    <string name="new_event">Nuevo evento</string>
    <string name="create_event">CREAR</string>
    <string name="event_type">Tipo del evento</string>
    <string name="ask">DEMANDA</string>
    <string name="offer">OFERTA</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="event_group">Evento grupal</string>
    <string name="event_address">Añade una dirección</string>
    <string name="event_name">Nombre del evento</string>
    <string name="event_fixed">Horario fijo?</string>
    <string name="description">Añade una descripción</string>
    <string name="capacity">Capacidad</string>
    <string name="stick">|</string>
    <string name="_0">0</string>
    <string name="event_image">Imagen del evento</string>
    <string name="logout">Cerrar sesión</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="my_profile">Mi perfil</string>
    <string name="settings">Ajustes</string>
    <string name="dashboard">Tablero</string>
    <string name="my_events">Mis eventos</string>
    <string name="loadingMessage">Cargando. Por favor espere…</string>
    <string name="location">Localización</string>
    <string name="errorEventInfo">Error obteniendo la información del evento</string>
    <string name="endDateBigger">La fecha final debe ser posterior a la fecha de inicio</string>
    <string name="unauthorized">No autorizado</string>
    <string name="forbidden">Prohibido</string>
    <string name="not_found">No encontrado</string>
    <string name="unexpectedError">Error inesperado</string>
    <string name="JSONException">JSONException</string>
    <string name="AddressNotFound">Dirección no encontrada</string>
    <string name="create_event_menu">Crear un evento</string>
    <string name="update">ACTUALIZAR</string>
    <string name="updateAccount">¡Cuenta actualizada!</string>
    <string name="notDate">A acordar con el usuario</string>
    <string name="notHour">-</string>
    <string name="demand">Demanda</string>
    <string name="offered">Oferta</string>
    <string name="about_description">Sobre este evento</string>
    <string name="join">Asignarse</string>
    <string name="invite">Compartir</string>
    <string name="hours">+- horas</string>
    <string name="about_me">Sobre mi</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="personal_events"> </string>
    <string name="search_users">Buscar usuarios</string>
    <string name="input_name">Introduce el nombre</string>
    <string name="category_language">Idioma</string>
    <string name="category_culture">Cultura</string>
    <string name="category_workshops">Taller</string>
    <string name="category_sports">Deporte</string>
    <string name="category_gastronomy">Gastronomía</string>
    <string name="category_leisure">Ocio</string>
    <string name="category_other">Otra</string>
    <string name="time_hours">Horas</string>
    <string name="delete">Eliminar</string>
    <string name="delete_event">Eliminar evento</string>
    <string name="are_sure">¿Estás seguro?</string>
    <string name="confirm_delete_event">¿Estás seguro de que quieres eliminar este evento?</string>
    <string name="confirm_report_user">¿Quieres reportar a este usuario?</string>
    <string name="discard">Descartar</string>
    <string name="confirm">Confirmar</string>
    <string name="eventUpdated">¡Evento actualizado!</string>
    <string name="event_category">Categoría</string>
    <string name="end_date">Fecha fin</string>
    <string name="start_date">Fecha inicio</string>
    <string name="start_hour">Hora inicio</string>
    <string name="end_hour">Hora fin</string>
    <string name="clean_filters">Limpiar filtros</string>
    <string name="EditAccount">Cuenta</string>
    <string name="account_status">Estado de la cuenta:</string>
    <string name="categories">Categorías</string>
    <string name="report_user">Reportar usuario</string>
    <string name="user_reported">Usuario reportado</string>
    <string name="user_already_reported">El usuario ya ha sido reportado</string>
    <string name="verify_account_text">Puedes pedir verificar tu cuenta aquí</string>
    <string name="status">Estado</string>
    <string name="send_request">Enviar petición</string>
    <string name="account_actual_balance">Balance actual de la cuenta</string>
    <string name="buy_more_hours">Comprar más horas</string>
    <string name="verified">VERIFICADO</string>
    <string name="standard">ESTÁNDAR</string>
    <string name="verification_requested">verificación pedida</string>
    <string name="awaiting_approval">Ha sido pedida. Esperando aprovación</string>
    <string name="Pick_hour_msg">Escoge una hora correcta</string>
    <string name="Wrong_date_msg">La fecha de inicio debe ser posterior a la actual y anterior a la fecha fin</string>
    <string name="Not_hours_msg">No tienes suficientes horas para crear este evento</string>
    <string name="event_created_msg">¡Evento creado con éxito!</string>
    <string name="something_wrong">Algo no ha ido bien</string>
    <string name="image_update">¡Imagen cambiada!</string>
    <string name="account_created">¡Cuenta creada!</string>
    <string name="language">Idioma</string>
    <string name="personal_events_ES">Eventos de</string>
    <string name="search_location_here">Busca la ubicación aquí…</string>
    <string name="user_balance">Balance del usuario:  </string>
    <string name="edit_profile">Editar perfil</string>
    <string name="change_picture">Cambiar imagen</string>
    <string name="join_msg">Únete a SocialBank para ver el evento de \'%1$s\'. Encuentra más información en %2$s\/%3$s</string>
    <string name="ok">Vale</string>
    <string name="user_developer">¡Este usuario es miembro del equipo de desenvolupadores de SocialBank!</string>
    <string name="developer">Desenvolupador</string>
    <string name="top_organizer">Mejor organizador</string>
    <string name="user_organizer">¡Este usuario es uno de los mejores organizadores en SocialBank!</string>
    <string name="active">Usuario activo</string>
    <string name="user_active">Este usuario se ha mostrado activo en SocialBank.</string>
    <string name="verified_account">Entidad verificada</string>
    <string name="user_verified">Este usuario dispone de una cuenta verificada en SocialBank.</string>
    <string name="get_hours">horas</string>
    <string name="thank_you_purchase">Gracias por su compra!</string>
    <string name="payment_rejected">Su transacción fue rechazada por el procesador de pagos!</string>
    <string name="verifying_payment">Verificando pago, por favor espere…</string>
    <string name="payment_not_finished">El proceso de pago no fue finalizado!</string>
    <string name="deleted_comment">Comentario eliminado</string>
    <string name="cancel">Cancelar</string>
    <string name="new_comment">Añade un nuevo comentario</string>
    <string name="comments">Comentarios</string>
    <string name="add_comment">Añade un comentario</string>
    <string name="initializing_paypal">Creando una conexión segura con PayPal, por favor espere…</string>
    <string name="information_event">Información del evento</string>
    <string name="edit_event">Editar evento</string>
    <string name="update_event">Actualizar descripción del evento</string>
    <string name="filter">Filtro</string>
    <string name="join_events">Eventos apuntados</string>
    <string name="disjoin">Desapuntarse</string>
    <string name="confirm_disjoin_event">¿Quieres desapuntarte de este evento?</string>
    <string name="not_hours_msg">No tienes horas suficientes para apuntarte a este evento</string>
    <string name="joined_msg">Te has apuntado al evento</string>
    <string name="cancel_btn">CANCELAR</string>
    <string name="leave_btn">Salir</string>
    <string name="canceljoin_msg">Ya no estas apuntado a este evento</string>
    <string name="individual">Individual</string>
    <string name="groupal">Grupal</string>
    <string name="event_full_msg">Este evento está completo</string>
    <string name="search_event">Buscar</string>
    <string name="item">Ítem</string>
    <string name="available">Disponible</string>
    <string name="event_tag">Tag</string>
    <string name="input_tags">#escribetutag</string>
    <string name="tag_search">Buscar por tag</string>
    <string name="noTags">No hay ningún tag a buscar</string>
    <string name="about_exchangeToken">Token de canjeo de horas</string>
    <string name="exchange_hours">Canjear horas</string>
    <string name="example_exchange_token">123-user@email.com-XXXX</string>
    <string name="insert_token_first">¡Debes insertar un código primero!</string>
    <string name="exchanged_success">¡El código ha sido redimido exitosamente!</string>
    <string name="about_payHours">Pagar horas</string>
    <string name="pay">Pagar</string>
    <string name="paid_hours">Horas pagadas</string>

</resources>