<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_close"
            android:id="@+id/dashboard"
            android:title="@string/dashboard" />
        <item
            android:icon="@drawable/ic_close"
            android:id="@+id/myProfile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nearbyEvents"
            android:title="@string/location" />

    </group>
    <item android:title="@string/settings">
        <menu>
            <item
                android:icon="@drawable/ic_close"
                android:id="@+id/logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>