<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_status"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/account_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:drawableStart="@drawable/ic_verified_user"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id="@+id/AccountStatus"
                android:text="@string/status"/>


        </LinearLayout>
        <TextView
            android:id="@+id/account_balance_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_actual_balance"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/user_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hours"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/account_verify_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_account_text"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/editText_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:scrollbars="vertical"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_send_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#c50e29"
            android:text="@string/send_request"
            android:visibility="gone" />

        <android.support.design.widget.TabLayout
            android:id="@+id/result_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            android:visibility="gone"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_buy_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#c50e29"
            android:text="@string/buy_more_hours"
            android:visibility="gone" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/language_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/language"/>

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/languages"
                android:textColor="@color/material_blue_grey_800"/>

        </LinearLayout>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>