<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.AppCompat.Light"
        app:navigationIcon="?attr/homeAsUpIndicator"
        tools:ignore="MissingConstraints,UnusedAttribute"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/log_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:background="@color/colorButton"
        android:text="@string/login"
        android:textColor="@color/colorTextButton"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:enabled="false"
        tools:layout_editor_absoluteX="148dp" />

    <Button
        android:id="@+id/forgot_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="8dp"
        android:text="@string/forgot"
        android:background="@color/colorTransparent"
        android:textColor="@color/colorTextForgot"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="267dp" />


</android.support.constraint.ConstraintLayout>