<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.integrate.socialbank.RecoverPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/textForgot"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/email_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@+id/textSubmit"
            tools:layout_editor_absoluteX="0dp" />


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@+id/email_submit"
            tools:enabled="false"
            tools:layout_editor_absoluteX="148dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
